# campania-landslide-kbs

./: .gitignore  README.md  era5rainfall.py  main.py  pyproject.toml
docs/: .~lock.documentazione.docx#  documentazione.docx
notebooks/: checks_feature_matrix.py  checks_geological_map.py
scripts/: check_geological_map.py  clean_geological_map.py  download_era5.py  download_geological_map.py
sources/: README.md
src/kb/: landslide_kb.pl
src/models/: train.py
src/pipeline/: 01_terrain.py  02_rasterize.py  02b_rasterize_roads.py  04_sample.py  05_kb.py
src/utils/: raster_utils.py
