[project]
name = "campania-landslide-kbs"
version = "0.1.0"
description = "a knowledge based system to guess where landslides are gonna happen"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cdsapi>=0.7.7",
    "dask>=2026.3.0",
    "geopandas>=1.1.3",
    "netcdf4>=1.7.4",
    "numpy>=2.4.3",
    "pyarrow>=23.0.1",
    "pysheds>=0.5",
    "pyswip>=0.3.3",
    "rasterio>=1.5.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "xarray>=2026.2.0",
]
